--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
+body{
+    background-color: #494949 !important;
+    font-family: Verdana, Geneva, sans-serif;
+}
 table, th, td {
-    border: 1px solid black;
+    border: 2px solid darkgray;
     border-collapse: collapse;
     text-align: center;
+    color: dodgerblue;
 }
 .table-div {
     width: 60%;
