--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ td a {
     width: 100%;
 }
 .table-div {
-    width: 60%;
+    width: 55%;
     min-width: 750px;
-    margin: auto;
+    margin: 20px auto 20px auto;
 }
